[package]
name = "aleo-explorer-rust"
version = "0.12.0"
edition = "2021"

[dependencies]

pyo3 = { version = "0.20.0", features = ["extension-module", "num-bigint"] }

num-bigint = "0.4.4"

snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }
snarkvm-console-account = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }
snarkvm-console-network = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }
snarkvm-console-program = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }
snarkvm-synthesizer-program = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet-staging" }

leo-compiler = { git = "https://github.com/AleoHQ/leo", rev = "46d539a0b6e05d4104c8c9c8b53900d00a519078" }
leo-errors = { git = "https://github.com/AleoHQ/leo", rev = "46d539a0b6e05d4104c8c9c8b53900d00a519078" }
leo-span = { git = "https://github.com/AleoHQ/leo", rev = "46d539a0b6e05d4104c8c9c8b53900d00a519078" }

anyhow = "1.0.81"
rand = "0.8.5"
rand_chacha = "0.3.1"
bech32 = "0.11.0"
tempfile = "3.10.1"

[build-dependencies]
pyo3-build-config = "0.20.0"

[lib]
crate-type = ["cdylib"]
name = "aleo_explorer_rust"

[profile.dev]
opt-level = 1
debug-assertions = false
