[metadata]
name = aleo-explorer-rust
version = 0.1.0
author = Haruka Ma
license = GPLv3-or-later
license-files = COPYING
description = "Aleo Explorer Rust Tools"
url = https://github.com/HarukaMa/aleo-explorer-rust
long_description = file: README.md
long_description_content_type = text/markdown
classifiers :
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Rust
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Private :: Upload Later

[options]
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.6
include_package_data = True
packages = aleo
zip_safe = False